--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.85.0",
     "@react-three/fiber": "^8.15.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18.3.1",
